@@ -4,8 +4,9 @@ powernap (2.12) unreleased; urgency=low
     - powerwake/*: Add module and Initial ARPMonitor (LP: #737479).
     - powerwaked.conf: Add config file.
     - powerwaked: Add daemon.
+    - powerwake-monitor: Add tool to add, delete, list, etc.
 
- -- Andres Rodriguez <andreserl@ubuntu.com>  Mon, 20 Jun 2011 18:26:37 -0400
+ -- Andres Rodriguez <andreserl@ubuntu.com>  Thu, 30 Jun 2011 17:19:42 -0400
 
 powernap (2.11-0ubuntu1) oneiric; urgency=low
 
